# zeth

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  risc0  run-parallel.sh  rust-toolchain.toml
.github/: dependabot.yml
.github/scripts/: extract-cycle-metrics.sh
.github/workflows/: dependabot-lockfile.yml  main.yml  release.yml
crates/chainspec/: Cargo.toml
crates/chainspec/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/crypto/: host_impl.rs  mod.rs  modexp.rs  p256.rs
crates/core/src/crypto/ec/: bn254.rs  mod.rs  p256.rs
crates/core/src/cycle_tracker/: collector.rs  evm.rs  mod.rs  tracer.rs  types.rs
crates/host/: Cargo.toml
crates/host/src/: cache.rs  cycle_tracker.rs  lib.rs
crates/host/tests/: e2e.rs  e2e_anvil.rs
crates/r0vm-precompile/: Cargo.toml
crates/r0vm-precompile/src/: bn254.rs  lib.rs  modexp.rs  secp256k1.rs  secp256r1.rs  sha256.rs
crates/r0vm-precompile/tests/: precompile.rs
crates/rpc-proxy/: Cargo.toml
crates/rpc-proxy/src/: lib.rs  lookup.rs  main.rs  rpc.rs  trie.rs  witness.rs
crates/rpc-proxy/src/db/: mod.rs  preflight.rs  provider.rs
dev/bench/: data.js
guests/: Cargo.toml  build.rs
guests/src/: lib.rs
guests/stateless-client/: Cargo.toml
guests/stateless-client/src/: lib.rs
scripts/: benchmark.py  trace.py
