[workspace]
resolver = "2"
members = ["crates/*", "guests"]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.86"

[workspace.dependencies]
# internal crates
guests = { path = "guests" }
zeth-core = { path = "crates/core" }
zeth-chainspec = { path = "crates/chainspec" }

# risc0
risc0-build = "3.0.3"
risc0-zkvm = "3.0.3"
risc0-ethereum-trie = { git = "https://github.com/risc0/risc0-ethereum.git", tag = "v3.0.1" }

# reth
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.9.1" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.9.1" }
reth-stateless = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.9.1" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.9.1" }
reth-errors = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.9.1" }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.9.1" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.9.1" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.9.1" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.9.1" }

# revm
revm = { version = "31.0.1", default-features = false }

# eth
alloy-chains = { version = "0.2.5", default-features = false }
alloy-evm = { version = "0.23.0", default-features = false }
alloy-primitives = { version = "1.4.1", default-features = false, features = [
    "map-foldhash",
] }
alloy-rlp = { version = "0.3.10", default-features = false }
alloy-trie = { version = "0.9.1", default-features = false }

alloy-hardforks = "0.4.4"

alloy = { version = "1.0.37", features = ["full"] }
alloy-consensus = { version = "1.0.37", default-features = false }
alloy-eips = { version = "1.0.37" }
alloy-genesis = { version = "1.0.37", default-features = false }

# misc
anyhow = "1.0"
async-trait = "0.1"
blst = "0.3.15"
bytemuck = "1.23"
clap = "4.5"
itertools = "0.14"
serde = "1.0"
serde_with = "3.14"
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1.46", features = ['full'] }
tracing = "0.1"
tracing-subscriber = "0.3"
