[workspace]
resolver = "2"
members = ["crates/*", "guests"]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.93"
license = "Apache-2.0"
repository = "https://github.com/boundless-xyz/zeth"

[workspace.lints.rust]
unreachable_pub = "warn"
unused_must_use = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.dependencies]
# internal crates
guests = { path = "guests" }
zeth-core = { path = "crates/core" }
zeth-chainspec = { path = "crates/chainspec" }

# r0vm
risc0-bigint2 = "1.4"
risc0-build = "3.0.5"
risc0-zkp = "3.0.4"
risc0-zkvm = "3.0.5"

# reth (using rev from paradigmxyz/stateless; TODO: pin to a tagged reth release)
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "adc960162f", default-features = false }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth.git", rev = "adc960162f", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "adc960162f", default-features = false }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", rev = "adc960162f", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth.git", rev = "adc960162f", default-features = false }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth.git", rev = "adc960162f", default-features = false }
reth-primitives-traits = { version = "0.1", default-features = false }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", rev = "adc960162f", default-features = false }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth.git", rev = "adc960162f", default-features = false }
stateless = { git = "https://github.com/paradigmxyz/stateless.git", rev = "63d8a00" }
tries = { git = "https://github.com/paradigmxyz/stateless.git", rev = "63d8a00" }

# alloy
alloy = { version = "1.8" }
alloy-consensus = { version = "1.8", features = ["serde", "serde-bincode-compat"] }
alloy-eips = { version = "1.8", default-features = false }
alloy-genesis = { version = "1.8", default-features = false }
alloy-primitives = { version = "1.5" }
alloy-rlp = { version = "0.3.8", default-features = false }

# trie
risc0-ethereum-trie = { git = "https://github.com/risc0/risc0-ethereum.git", tag = "v3.0.1" }

# arkworks
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-secp256r1 = "0.5"

# misc
anyhow = "1.0"
rstest = "0.26"
async-trait = "0.1"
blst = "0.3.15"
bytemuck = "1.23"
clap = "4.5"
itertools = "0.14"
num-bigint = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_with = "3"
sha2 = "0.10"
tempfile = "3.25"
thiserror = "2"
tokio = { version = "1.46", features = ['full'] }
test-log = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
