[package]
name = "zeth-chainspec"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
alloy-eips = { workspace = true }
alloy-genesis = { workspace = true }
alloy-primitives = { workspace = true }
reth-chainspec = { workspace = true }
reth-ethereum-forks = { workspace = true }
reth-evm = { workspace = true }
reth-network-peers = { workspace = true }
reth-primitives-traits = { workspace = true }

[lints]
workspace = true
