[package]
name = "zeth-core"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
# Allow proving of pre-merge (Proof-of-Work) blocks.
# This is considered unsafe because reth does not correctly validate all difficulty constraints.
unsafe-pre-merge = []
# Enable R0VM optimized crypto implementations for precompiles.
r0vm = ["dep:num-bigint", "dep:risc0-bigint2"]

[dependencies]
alloy-primitives = { workspace = true, features = ["map"] }
alloy-rlp = { workspace = true }
num-bigint = { workspace = true, optional = true }
reth-chainspec = { workspace = true }
reth-errors = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-evm = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-stateless = { workspace = true }
reth-trie-common = { workspace = true }
risc0-bigint2 = { workspace = true, optional = true }
risc0-ethereum-trie = { workspace = true }
risc0-zkp = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }

[target.'cfg(not(all(target_os = "zkvm", target_vendor = "risc0")))'.dependencies]
ec-generic = "0.1"

[dev-dependencies]
rstest = { workspace = true }

[lints]
workspace = true
