[package]
name = "zeth-core"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
# Allow proving of pre-merge (Proof-of-Work) blocks.
# This is considered unsafe because reth does not correctly validate all difficulty constraints.
unsafe-pre-merge = []
# Enable R0VM optimized crypto implementations for precompiles.
r0vm = ["dep:num-bigint", "dep:risc0-bigint2"]

[dependencies]
alloy-primitives = { workspace = true, features = ["map"] }
alloy-rlp = { workspace = true }
num-bigint = { workspace = true, optional = true }
reth-chainspec = { workspace = true }
reth-errors = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-evm = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-stateless = { workspace = true }
reth-trie-common = { workspace = true }
risc0-bigint2 = { workspace = true, optional = true }
risc0-ethereum-trie = { workspace = true }
risc0-zkp = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }

[target.'cfg(not(all(target_os = "zkvm", target_vendor = "risc0")))'.dependencies]
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-secp256r1 = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
