[package]
name = "zeth-core"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
# Allow proving of pre-merge (Proof-of-Work) blocks.
# This is considered unsafe because reth does not correctly validate all difficulty constraints.
unsafe-pre-merge = []

[dependencies]
alloy-primitives = { workspace = true, features = ["map"] }
alloy-rlp = { workspace = true }
reth-chainspec = { workspace = true }
reth-errors = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-evm = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-stateless = { workspace = true }
reth-trie-common = { workspace = true }
risc0-ethereum-trie = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }

# R0VM-accelerated precompile primitives (zkVM-only). The crate itself assumes
# the zkVM target and wouldn't link on host; the adapter `impl Crypto` block is
# cfg-gated to match.
[target.'cfg(all(target_os = "zkvm", target_vendor = "risc0"))'.dependencies]
zeth-r0vm-precompile = { workspace = true }

[lints]
workspace = true
