[package]
name = "zeth-host"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
alloy = { workspace = true }
alloy-chains = { workspace = true }
anyhow = { workspace = true }
blst = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
guests = { workspace = true }
reth-chainspec = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-stateless = { workspace = true }
risc0-zkvm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeth-core = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true, features = ["raw_value"] }
test-log = { workspace = true }

[features]
unsafe-pre-merge = ["guests/unsafe-pre-merge", "zeth-core/unsafe-pre-merge"]
