[package]
name = "zeth-host"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
unsafe-pre-merge = ["guests/unsafe-pre-merge", "zeth-core/unsafe-pre-merge"]

[dependencies]
alloy = { workspace = true, features = ["provider-debug-api"] }
anyhow = { workspace = true }
blst = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
guests = { workspace = true }
reth-chainspec = { workspace = true }
reth-ethereum-primitives = { workspace = true }
reth-primitives-traits-v1 = { package = "reth-primitives-traits", git = "https://github.com/paradigmxyz/reth.git", tag = "v1.11.3", features = ["serde-bincode-compat"] }
risc0-zkvm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
stateless = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeth-core = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true, features = ["raw_value"] }
test-log = { workspace = true }

[lints]
workspace = true
