[package]
name = "zeth-rpc-proxy"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
actix-web = "4"
alloy = { workspace = true, features = ["rlp"] }
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
blst = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
itertools = { workspace = true }
rayon = "1.11"
reqwest = { version = "0.13.2", features = ["json"] }
reth-chainspec = { workspace = true }
reth-evm = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-revm = { workspace = true }
stateless = { workspace = true }
reth-trie-common = { workspace = true }
risc0-ethereum-trie = { workspace = true, features = ["orphan"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = "0.7"
tracing-subscriber = { workspace = true }

[lints]
workspace = true
