[package]
name = "stateless-client"
version = "0.3.0"
edition = "2021"

[workspace]

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
alloy-primitives = { version = "*", features = ["tiny-keccak"] }
blst = { version = "=0.3.16" }
c-kzg = { version = "=2.1.7" }
# Must match the major revm version used by reth to avoid duplicate crates in the guest binary.
revm = { version = "36.0.0", default-features = false, features = ["blst", "bn", "c-kzg"] }
risc0-zkvm = "3.0.5"
sha2 = { version = "=0.10.9" }
substrate-bn = { version = "=0.6.0" }
tiny-keccak = { version = "=2.0.2" }
zeth-chainspec = { path = "../../crates/chainspec" }
zeth-core = { path = "../../crates/core", features = ["r0vm"] }

[features]
unsafe-pre-merge = ["zeth-core/unsafe-pre-merge"]

[patch.crates-io]
blst = { git = "https://github.com/risc0/blst", tag = "v0.3.16-risczero.0" }
# TODO: Replace with official risc0 fork once a v2.1.7-risczero tag is available.
c-kzg = { git = "https://github.com/Wollac/c-kzg-4844.git", branch = "risc0-v2.1.7" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }
substrate-bn = { git = "https://github.com/risc0/paritytech-bn", tag = "v0.6.0-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
